Difficulty 3.Fixed test testGetQuestions_AmountOne_ReturnsOneQuestion()